overlapping annotation fixes and annotation positioning fixes MVN-18 MVN-9

--- a/css/styles.less
+++ b/css/styles.less
@@ -41,6 +41,7 @@
 #container .text a {
 	text-decoration: none;
 	color: #777;
+	cursor: default;
 }
 // =========== Interface
 
@@ -545,11 +546,20 @@ a {
 	font-style: normal;
 	border-top: 2px solid #00B3B0;
 	padding-top: 6px;
+	background-color: white;
+	z-index: 1;
+	border-bottom: 1px dotted #00B3B0;
+	opacity: .9;
 	span {
 		position: static;
 		display: inline;
 		float: none;
 		border: none;
+	}
+	&:hover {
+		z-index: 2;
+		color: #333;
+		opacity: 1;
 	}
 }
 
@@ -763,6 +773,7 @@ a {
 	}
 	.versenum { visibility: hidden; }
 	.textnum {
+		float: right;
 		color: @defaultGray;
 	}
 }
